force-app/main/default/objects/Market_Risk__c/Market_Risk__c.object-meta.xml
<CustomObject>
    <description>Structured market blind spots and risk items linked to a market analysis.</description>
    <label>Market Risk</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Risk Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>