force-app/main/default/objects/Market_Risk__c/fields/Market_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Market_Analysis__c</fullName>
    <label>Market Analysis</label>
    <referenceTo>Market_Analysis__c</referenceTo>
    <relationshipLabel>Market Risks</relationshipLabel>
    <relationshipName>Market_Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>