force-app/main/default/objects/Market_Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Demographics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>